Archive2/04/08b1b691b1a355/output
main.cpp:16:49: error: use of undeclared identifier 'sortByCityName'; did you mean 'City::SortByCityName'?
        std::sort(cities.begin(), cities.end(), sortByCityName);   
                                                ^~~~~~~~~~~~~~
                                                City::SortByCityName
main.cpp:13:23: note: 'City::SortByCityName' declared here
    friend bool City::SortByCityName(const City &c1, const City &c2);
                      ^
main.cpp:16:49: error: call to non-static member function without an object argument
        std::sort(cities.begin(), cities.end(), sortByCityName);   
                                                ^~~~~~~~~~~~~~
2 errors generated.
